# gwtui

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: discovery.rs  git.rs  mod.rs  naming.rs  status.rs  worktree.rs
src/mux/: mod.rs  zellij.rs
src/output/: mod.rs  table.rs
src/task/: execution.rs  mod.rs  model.rs  storage.rs  worker.rs
src/tui/: app.rs  log_viewer.rs  mod.rs  picker.rs  status_dashboard.rs
tests/: integration_git_worktree.rs
