[package]
name = "gwtui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5.29", features = ["derive"] }
clap_complete = "4.5.44"
crossterm = "0.29.0"
csv = "1.3.1"
directories = "6.0.0"
ratatui = "0.29.0"
regex = "1.11.1"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting", "parsing"] }
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8.20"
toml_edit = "0.22.23"
uuid = { version = "1.12.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.15.0"
